--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 			</div>
 			
 			<!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="project1">
+				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal-id-1">
 				  Launch demo modal
 				</button>
 
 				<!-- Modal -->
-				<div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal fade" id="model-id-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
